--- a/loader.css
+++ b/loader.css
@@ -1,6 +1,6 @@
 /* Loading visual Lesson */
 #loading-outer-container {
-  margin: 40px auto;
+  margin: 0 auto;
 }
 
 .spinner {
@@ -51,6 +51,7 @@
 }
 
 @-webkit-keyframes bounce {
+
   0%,
   100% {
     -webkit-transform: scale(0);
@@ -62,6 +63,7 @@
 }
 
 @keyframes bounce {
+
   0%,
   100% {
     transform: scale(0);
@@ -73,3 +75,83 @@
     -webkit-transform: scale(1);
   }
 }
+
+
+
+/* Loading visual Lesson */
+/* section.user-forms #loading-outer-container {
+  margin: 40px auto;
+}
+
+section.user-forms .spinner {
+  display: none;
+}
+
+section.user-forms #loading-inner-container {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 20%;
+}
+
+section.user-forms #loadspin {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  margin: 0 auto;
+}
+
+section.user-forms #circle2 {
+  background-color: #39b1c6;
+}
+
+section.user-forms #circle1 {
+  background-color: #ec3f8c;
+}
+
+section.user-forms #circle1,
+section.user-forms #circle2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-animation: bounce 2s infinite ease-in-out;
+  animation: bounce 2s infinite ease-in-out;
+}
+
+section.user-forms #circle2 {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+
+@-webkit-keyframes bounce {
+
+  0%,
+  100% {
+    -webkit-transform: scale(0);
+  }
+
+  50% {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes bounce {
+
+  0%,
+  100% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+  }
+
+  50% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+  }
+} */
