--- a/style.css
+++ b/style.css
@@ -26,13 +26,16 @@ html {
   --color-background: #f7f7f7;
   --color-background-2: #e0dede;
   --color-background-3: #fafafa;
-  --color-background-4: #aaaaaa;
+  --color-background-4: #fafafa;
   --color-background-auth-input: ;
   --color-border-auth-input: 1px solid #aaaaaa;
   --color-background-nav: #316fea;
   --color-header: #fafafa;
+  --color-subheader: #316fea;
   --background-btn: #316fea;
   --background-auth-btn: #316fea;
+  --background-auth-dialog: #ffdce0;
+  --border-auth-dialog: 1px solid rgba(27, 31, 35, 0.15);
   --color-background-auth-btn: #fff;
   --color-auth-input: hsla(0, 2%, 24%, 0.87);
   --color-add-hover: #e2e2e2;
@@ -63,12 +66,15 @@ html {
   --color-background-2: #363636;
   --color-background-3: #1f1f1f;
   --color-background-4: #171717;
-  --color-background-auth-input: ;
+  --color-background-auth-input: #171717;
   --color-border-auth-input: solid 1px hsla(0, 0%, 100%, 0.1);
   --color-header: #fafafa;
+  --color-subheader: #1f1f1f;
   --color-background-nav: #282828;
   --background-btn: #e2e2e2;
   --background-auth-btn: #e6e6ee;
+  --background-auth-dialog: #ffced4;
+  --border-auth-dialog: 1px solid rgba(27, 31, 35, 0.15);
   --color-background-auth-btn: #171717;
   --color-auth-input: #e2e2e2;
   --color-add-hover: #e2e2e2;
@@ -229,7 +235,7 @@ form div.inline {
 }
 
 form div.inline input {
-  width: 90%;
+  width: 100%;
 }
 
 form div.inline input:last-child {
@@ -239,11 +245,19 @@ form div.inline input:last-child {
 div.form-wrapper form label,
 div.form-wrapper form button,
 div.input-feedback {
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 
 div.form-wrapper form label {
   font-size: 1.7rem;
+}
+
+div.form-wrapper form label.fname {
+  margin-right: 1rem;
+}
+
+div.form-wrapper form label.lname {
+  margin-left: 1rem;
 }
 
 div.form-wrapper form label input {
@@ -260,6 +274,7 @@ div.form-wrapper form button {
   border-radius: 3px;
   color: var(--color-background-auth-btn);
   font-size: 2rem;
+  margin-bottom: 3rem;
 }
 
 /**** USER DASHBOARD ****/
@@ -451,11 +466,19 @@ button.svg-btn svg.rotate {
   }
 
   nav .user-nav__item {
-    margin: 0rem;
+    margin: 1rem;
   }
 
   span.logo {
     font-size: 1.4rem;
+  }
+
+  p.todos-intro__goal {
+    font-size: 1.5rem;
+  }
+
+  span.todos-intro__goal__options svg {
+    margin-right: 0rem;
   }
 }
 
@@ -463,7 +486,7 @@ section.todos {
   display: none;
 }
 
-p.todos-intro__goal {
+.todos-intro__goal {
   font-weight: 700;
   font-size: 2rem;
   margin-bottom: 1rem;
@@ -472,7 +495,7 @@ p.todos-intro__goal {
   justify-content: space-between;
 }
 
-span.todos-intro__goal__options svg {
+.todos-intro__goal__options svg {
   margin-right: 2rem;
   cursor: pointer;
 }
@@ -553,7 +576,7 @@ form label {
 form input {
   width: 100%;
   padding: 1rem;
-  border: var(--line);
+  border: var(--color-border-auth-input);
   border-radius: 3px;
   font-size: 14px;
   background: var(--color-background-4);
@@ -692,7 +715,7 @@ div.welcome-msg img {
 }
 
 .header {
-  background: var(--color-background-3);
+  background: var(--color-subheader);
   border-radius: 3px;
 }
 
@@ -701,6 +724,7 @@ div.welcome-msg img {
   padding-bottom: 1rem;
   border-bottom: var(--line);
   padding-left: 2rem;
+  color: var(--color-header);
 }
 
 .form-modal label {
@@ -885,4 +909,31 @@ div.welcome-msg img {
 
 .hide {
   display: none;
+}
+
+button.hide {
+  display: none;
+}
+
+section.user-forms .signin-auth-error {
+  display: none;
+  padding: 1.5rem;
+  color: #86181d;
+  background-color: var(--background-auth-dialog);
+  border: var(--border-auth-dialog);
+  border-radius: 3px;
+  text-align: center;
+  font-size: 1.6rem;
+}
+
+
+section.user-forms .signup-auth-error {
+  display: none;
+  padding: 1.6rem;
+  color: #86181d;
+  background-color: var(--background-auth-dialog);
+  border: var(--border-auth-dialog);
+  border-radius: 3px;
+  text-align: center;
+  font-size: 1.6rem;
 }
