--- a/firebase-code/style.css
+++ b/firebase-code/style.css
@@ -21,14 +21,24 @@ html {
 .theme-light {
   --color-primary: #110e0e;
   --color-primary-2: hsla(0, 2%, 24%, 0.87);
+  --color-hover: #316fea;
 
   --color-background: #f7f7f7;
   --color-background-2: #e0dede;
   --color-background-3: #fafafa;
-  --color-background-4: #aaaaaa;
+  --color-background-4: #fafafa;
+  --color-background-auth-input: ;
+  --color-border-auth-input: 1px solid #aaaaaa;
   --color-background-nav: #316fea;
   --color-header: #fafafa;
+  --color-subheader: #316fea;
   --background-btn: #316fea;
+  --background-auth-btn: #316fea;
+  --background-auth-dialog: #ffdce0;
+  --border-auth-dialog: 1px solid rgba(27, 31, 35, 0.15);
+  --color-background-auth-btn: #fff;
+  --color-auth-input: hsla(0, 2%, 24%, 0.87);
+  --color-add-hover: #e2e2e2;
   --blue: #316fea;
   --red: #db4c3f;
 
@@ -41,6 +51,10 @@ html {
   --svg-btn-hover-background: var(--color-background-2);
   --svg-header-btn-hover: #1a8eff;
   --svg-btn-hover-radius: .3rem;
+
+  --active: #316fea;
+  --focus: 2px #316fea;
+  --border-hover: #316fea;
 }
 
 .theme-dark {
@@ -52,10 +66,18 @@ html {
   --color-background-2: #363636;
   --color-background-3: #1f1f1f;
   --color-background-4: #171717;
+  --color-background-auth-input: #171717;
+  --color-border-auth-input: solid 1px hsla(0, 0%, 100%, 0.1);
   --color-header: #fafafa;
+  --color-subheader: #1f1f1f;
   --color-background-nav: #282828;
   --background-btn: #e2e2e2;
-
+  --background-auth-btn: #e6e6ee;
+  --background-auth-dialog: #ffced4;
+  --border-auth-dialog: 1px solid rgba(27, 31, 35, 0.15);
+  --color-background-auth-btn: #171717;
+  --color-auth-input: #e2e2e2;
+  --color-add-hover: #e2e2e2;
   --line: solid 1px hsla(0, 0%, 100%, 0.1);
 
   --svg-fill-path-nav: #fff;
@@ -63,6 +85,10 @@ html {
   --svg-header-btn-hover: hsla(0, 0%, 100%, .2);
   --svg-btn-hover-background: hsla(0, 0%, 100%, .2);
   --svg-btn-hover-radius: .3rem;
+
+  --active: #2cb978;
+  --focus: 2px #2cb978;
+  --border-hover: #2cb978;
 }
 
 
@@ -84,6 +110,10 @@ body {
 button {
   background: var(--background-btn);
   color: var(--color-background-3);
+}
+
+button.signout {
+  font-weight: 700;
 }
 
 button:hover,
@@ -171,7 +201,9 @@ img.toggle-state-icon {
 section.user-forms {
   height: calc(100vh - 6rem);
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
   position: relative;
   overflow-y: hidden;
 }
@@ -184,7 +216,7 @@ div.form-wrapper {
   max-width: 60rem;
   width: 100%;
   /* position: absolute;
-  top: 10%; */
+  top: 3%; */
 }
 
 div.form-wrapper h3 {
@@ -203,7 +235,7 @@ form div.inline {
 }
 
 form div.inline input {
-  width: 90%;
+  width: 100%;
 }
 
 form div.inline input:last-child {
@@ -213,24 +245,36 @@ form div.inline input:last-child {
 div.form-wrapper form label,
 div.form-wrapper form button,
 div.input-feedback {
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 
 div.form-wrapper form label {
   font-size: 1.7rem;
 }
 
+div.form-wrapper form label.fname {
+  margin-right: 1rem;
+}
+
+div.form-wrapper form label.lname {
+  margin-left: 1rem;
+}
+
 div.form-wrapper form label input {
   margin-top: 1rem;
+  background: var(--color-background-auth-input);
+  border: var(--color-border-auth-input);
+  color: var(--color-auth-input);
 }
 
 div.form-wrapper form button {
   padding: 0.8rem 0;
-  background: var(--background-btn);
+  background: var(--background-auth-btn);
   border: 0;
   border-radius: 3px;
-  color: #fff;
+  color: var(--color-background-auth-btn);
   font-size: 2rem;
+  margin-bottom: 3rem;
 }
 
 /**** USER DASHBOARD ****/
@@ -422,11 +466,19 @@ button.svg-btn svg.rotate {
   }
 
   nav .user-nav__item {
-    margin: 0rem;
+    margin: 1rem;
   }
 
   span.logo {
     font-size: 1.4rem;
+  }
+
+  p.todos-intro__goal {
+    font-size: 1.5rem;
+  }
+
+  span.todos-intro__goal__options svg {
+    margin-right: 0rem;
   }
 }
 
@@ -434,7 +486,7 @@ section.todos {
   display: none;
 }
 
-p.todos-intro__goal {
+.todos-intro__goal {
   font-weight: 700;
   font-size: 2rem;
   margin-bottom: 1rem;
@@ -443,12 +495,13 @@ p.todos-intro__goal {
   justify-content: space-between;
 }
 
-span.todos-intro__goal__options svg {
+.todos-intro__goal__options svg {
   margin-right: 2rem;
   cursor: pointer;
 }
 
-span.todos-intro__goal__options svg:hover {
+span.todos-intro__goal__options svg:hover,
+span.todos-list__item__options svg:hover {
   background-color: var(--svg-btn-hover-background);
   border-radius: var(--svg-btn-hover-radius);
 }
@@ -464,7 +517,7 @@ p.todos-intro__btn span {
   width: 20px;
   display: flex;
   height: 20px;
-  color: #2cb978;
+  color: var(--color-hover);
   justify-content: center;
   align-items: center;
   margin-right: 2rem;
@@ -482,8 +535,8 @@ span.todos-list__item__options {
   visibility: hidden;
 }
 
-span.todos-list__item__options img {
-  margin-right: 2rem;
+span.todos-list__item__options svg {
+  margin-right: 1rem;
 }
 
 /* span.todos-list__item__options img:hover {
@@ -493,7 +546,7 @@ span.todos-list__item__options img {
 } */
 
 @media screen and (max-width: 576px) {
-  span.todos-list__item__options img {
+  span.todos-list__item__options svg {
     margin-right: 1rem;
   }
 
@@ -523,7 +576,7 @@ form label {
 form input {
   width: 100%;
   padding: 1rem;
-  border: var(--line);
+  border: var(--color-border-auth-input);
   border-radius: 3px;
   font-size: 14px;
   background: var(--color-background-4);
@@ -662,7 +715,7 @@ div.welcome-msg img {
 }
 
 .header {
-  background: var(--color-background-3);
+  background: var(--color-subheader);
   border-radius: 3px;
 }
 
@@ -671,6 +724,7 @@ div.welcome-msg img {
   padding-bottom: 1rem;
   border-bottom: var(--line);
   padding-left: 2rem;
+  color: var(--color-header);
 }
 
 .form-modal label {
@@ -705,11 +759,8 @@ div.welcome-msg img {
 
   input[type="checkbox"],
   input[type="radio"] {
-    --active: #2cb978;
     --active-inner: #fff;
-    --focus: 2px #2cb978;
     --border: #bbc1e1;
-    --border-hover: #2cb978;
     --background: var(--color-background-4);
     --disabled: #f6f8ff;
     --disabled-inner: #e1e6f9;
@@ -785,7 +836,7 @@ div.welcome-msg img {
     --o: 1;
   }
 
-  input[type="checkbox"]+label,
+  /* input[type="checkbox"]+label,
   input[type="radio"]+label {
     font-size: 14px;
     line-height: 21px;
@@ -793,7 +844,7 @@ div.welcome-msg img {
     vertical-align: top;
     cursor: pointer;
     margin-left: 4px;
-  }
+  } */
 
   input[type="checkbox"]:not(.switch) {
     border-radius: 50px;
@@ -856,8 +907,33 @@ div.welcome-msg img {
   }
 }
 
-@media screen and (max-width: 768px) {}
-
 .hide {
   display: none;
+}
+
+button.hide {
+  display: none;
+}
+
+section.user-forms .signin-auth-error {
+  display: none;
+  padding: 1.5rem;
+  color: #86181d;
+  background-color: var(--background-auth-dialog);
+  border: var(--border-auth-dialog);
+  border-radius: 3px;
+  text-align: center;
+  font-size: 1.6rem;
+}
+
+
+section.user-forms .signup-auth-error {
+  display: none;
+  padding: 1.6rem;
+  color: #86181d;
+  background-color: var(--background-auth-dialog);
+  border: var(--border-auth-dialog);
+  border-radius: 3px;
+  text-align: center;
+  font-size: 1.6rem;
 }
